--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         window.onload = function () {
             const ui = SwaggerUIBundle({
                 url: "openapi.yaml", 
-                dom_id: "#openapi"
+                dom_id: "#openapi",
+                supportedSubmitMethods: []
             })
         }
     </script>
